# DEM10-LAB-Kafka-Streaming-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ORIGINAL_TASK.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  SETUP.md  TROUBLESHOOTING.md
grafana/dashboards/: anomaly-deep-dive.json  customer-analytics.json  heartbeat-overview.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: postgres.yml
scripts/: inspect_db.py  monitor_kafka.py  run_tests.sh
sql/: init.sql
src/: consumer.py  producer.py  test_data_producer.py
src/heartbeat_pipeline/: __init__.py  config.py  constants.py  db.py  exceptions.py  generator.py  logging_config.py  logging_utils.py  models.py
tests/: conftest.py  test_config.py  test_generator.py  test_models.py
